# ros2_control_moveit_6-dor-arm

./: README.md
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/install/my_robot_bringup/share/my_robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros_ws/install/my_robot_controller/include/my_robot_controller/: my_custom_controller.hpp
ros_ws/install/my_robot_controller/share/my_robot_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  my_robot_controller.xml  package.ps1  package.sh  package.xml
ros_ws/install/my_robot_description/share/my_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros_ws/install/my_robot_hardware_interface/share/my_robot_hardware_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  my_robot_hardware_interface.xml  package.dsv  package.ps1  package.sh  package.xml
ros_ws/install/my_robot_moveit_config/share/my_robot_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
ros_ws/log/: latest_build
ros_ws/src/my_robot_bringup/: CMakeLists.txt
ros_ws/src/my_robot_controller/: CMakeLists.txt  package.xml
ros_ws/src/my_robot_controller/include/my_robot_controller/: my_custom_controller.hpp
ros_ws/src/my_robot_controller/src/: my_custom_controller.cpp
ros_ws/src/my_robot_description/: CMakeLists.txt  package.xml
ros_ws/src/my_robot_description/rviz/: my_robot_description.rviz
ros_ws/src/my_robot_description/urdf/: arm_description.urdf
ros_ws/src/my_robot_description/urdf/mock_components/: my_robot_description.ros2_control.xacro  my_robot_description.urdf.xacro
ros_ws/src/my_robot_hardware_interface/: CMakeLists.txt  my_robot_hardware_interface.xml  package.xml
ros_ws/src/my_robot_hardware_interface/include/my_robot_hardware_interface/: my_robot_hardware_interface.hpp
ros_ws/src/my_robot_hardware_interface/src/: my_robot_hardware_interface.cpp
ros_ws/src/my_robot_moveit_config/: .setup_assistant  package.xml
ros_ws/src/my_robot_moveit_config/config/: moveit_controllers.yaml  my_robot_description.ros2_control.xacro  my_robot_description.urdf.xacro  ros2_controllers.yaml
ros_ws/src/my_robot_moveit_config/launch/: demo.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
(+66 files in other folders)
